2002-02-25  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	(yelp_window_new): added index-list to arguments.

	* src/yelp-view-index.c: started to fix (was a copy&paste from
	  yelp-view-content.

	* src/yelp-section.h: added YELP_SECTION_INDEX to YelpSectionType.

	* src/yelp-section.c: include string.h, fixes compile warning.

	* src/yelp-scrollkeeper.c:
	- Basic support for ScrollKeeper index added
	- use g_ascii_strcasecmp instead of depricated g_strcasecmp.
	  Thanks to the wipro guys for notifying.
	(ys_parse_index): added/impl.
	(ys_parse_index_file): added/impl.
	(ys_parse_index_item): added/impl.
	(yelp_scrollkeeper_init): 
	- added GList **index to arguments.

	* src/yelp-main.c:
	(yelp_main_open_new_window): use g_error
	(yelp_main_start): same.

	* src/yelp-history.c: include string.h, fixes compile warning.

	* src/yelp-base.c: added index-list to priv-struct
	(yelp_base_new): call scrollkeeper_init with index-list
	(yelp_base_new_window): send the index-list to the new window.

2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-main.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-20  Simos Xenitellis  <simos@hellug.gr>

	* configure.in: Added "el" to ALL_LINGUAS.

2002-02-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-history.c (yelp_history_goto): don't add entry to
	  history list if it's the same as the current.

	* src/yelp-window.c (yw_home_button_clicked): Notify the history
	  list that we have moved.

	* src/yelp-view-index.c (yvi_tree_selection_changed_cb): call
	  yelp_html_open_uri instead of yelp_html_open_section.

	* src/yelp-html.[ch] (yelp_html_open_uri): renamed from
	  yelp_html_open_sectoin. It now takes an uri and a reference 
	  instead of a YelpSection.

	* src/yelp-view-content.c (yelp_view_content_show_uri): call
	  yelp_html_open_uri instead of creating a temporary YelpSection.

	* src/yelp-view-toc.c (yelp_view_toc_man_2): don't send html for